--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ width:100%;
 }
 #intro{
     color: azure;
+    font-size: 2vw;
     font-family: "Bowlby One", sans-serif;
   font-weight: 400;
   font-style: normal;
