--- a/style.css
+++ b/style.css
@@ -14,9 +14,11 @@ width:100%;
 
 
 #Main{
+    position: absolute;
+    top: 0%;
     height: 100vh;
     width: 100vw;
-    background-color: black;
+    /* background-color: black; */
     display: flex;
     align-items: center;
     justify-content: center;
