--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ width:100%;
     top: 0%;
     height: 100vh;
     width: 100vw;
-    /* background-color: black; */
+    background-color:rgba(0, 0, 0, 0.128); 
     display: flex;
     align-items: center;
     justify-content: center;
